scrollbar color issue solve

--- a/src/scss/themes/general.scss
+++ b/src/scss/themes/general.scss
@@ -70,3 +70,9 @@ strong {
     }
   }
 }
+
+ng-scrollbar {
+        --scrollbar-thumb-color: #{$gray-500};
+        --scrollbar-track-color: transparent !important;
+      }
+    
